--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,11 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-stats-compass-core = {version = "^0.1.2", extras = ["all"]}
+stats-compass-core = {extras = ["all"], version = "^0.1.3"}
 mcp = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
-pytest = "^9.0.0"
+pytest = "^8.2.0"
 pytest-asyncio = "^0.24.0"
 ruff = "^0.8.0"
 mypy = "^1.0.0"
