--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ classifiers = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
-stats-compass-core = {path = "../stats-compass-core", develop = true, extras = ["all"]}
+stats-compass-core = {version = "^0.1.10", extras = ["all"]}
 mcp = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
